# warp-claw

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  test_warp_cortex_scalability.py
config/: agents.yaml  models.yaml
scripts/: download_models.py  install.sh  setup_m1.sh
src/core/: __init__.py  agent_council.py  cortex_bridge.py  critical_fixes.py  memory_synapse.py
src/dashboard/: __init__.py  app.py
src/interfaces/: __init__.py  mcp_bridge.py  openai_api.py  websocket_stream.py
src/tools/: __init__.py  base_tool.py  code_executor.py  file_system.py  knowledge_graph.py  web_search.py
tests/: __init__.py  test_core.py
warp_agent/: __init__.py  cli.py
warp_agent/warp_cortex/: __init__.py  injection.py  manager.py  singleton.py  sparsification.py  synapse.py
