[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-agent"
version = "0.1.0"
description = "Warp-Cortex-Enabled Hermes Agent for million-agent AI coordination"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Warp Agent Team", email = "info@warp-agent.ai"},
]
maintainers = [
    {name = "Warp Agent Team", email = "info@warp-agent.ai"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "multi-agent", "hermes", "warp-cortex", "llm"]
dependencies = [
    # Core AI/ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.20.0",
    "tokenizers>=0.15.0",

    # Warp-Cortex dependencies
    "gudhi>=3.8.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",

    # FastAPI server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",

    # Hermes Agent core
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",

    # Tool ecosystem
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # MCP integration
    "mcp[cli]>=1.0.0",

    # Additional utilities
    "click>=8.0.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
all = [
    "warp-agent[web]",
    "warp-agent[voice]",
    "warp-agent[messaging]",
    "warp-agent[dev]",
    "warp-agent[monitoring]",
]
web = [
    "websockets>=12.0.0",
    "streamlit>=1.30.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
]
messaging = [
    "python-telegram-bot[webhooks]>=20.0",
    "discord.py>=2.0.0",
    "slack-sdk>=3.0.0",
    "slack-bolt>=1.18.0",
    "matrix-nio>=0.24.0",
    "qrcode>=7.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
monitoring = [
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
warp-agent = "warp_agent.cli:main"

[project.urls]
Homepage = "https://github.com/noobsmoker/Warp-Agent"
Documentation = "https://github.com/noobsmoker/Warp-Agent#readme"
Repository = "https://github.com/noobsmoker/Warp-Agent"
Issues = "https://github.com/noobsmoker/Warp-Agent/issues"
Changelog = "https://github.com/noobsmoker/Warp-Agent/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["warp_agent*", "hermes_agent*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
warp_agent = ["config/*.yaml", "data/**/*"]
hermes_agent = ["tools/**/*", "config/**/*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["warp_agent", "hermes_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gudhi.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]